tests/js/success/cfg_while2.js
/*******************************************************************************
    Copyright (c) 2012, S-Core.
    All rights reserved.

    Use is subject to license terms.

    This distribution may include materials developed by third parties.
 ***************************************************************************** */
var x;
x = 0;
while(true) {
    x = 1;
    while(x) {
      if (x) break;
    }
}
x = 2;
